Feat: 게시글 리스트 가져오는 기능 추가

--- a/src/main/resources/templates/article/list.html
+++ b/src/main/resources/templates/article/list.html
@@ -1,1 +1,14 @@
-<h1>게시글 리스트</h1>
+<table>
+    <thead>
+    <tr>
+        <th>제목</th>
+        <th>작성일시</th>
+    </tr>
+    </thead>
+    <tbody>
+<!--    <tr th:each="article : ${articleList}">-->
+<!--        <td th:text="${article.title}"></td>-->
+<!--        <td th:text="${article.content}"></td>-->
+<!--    </tr>-->
+    </tbody>
+</table>
