--- a/src/main/resources/templates/article/list.html
+++ b/src/main/resources/templates/article/list.html
@@ -3,12 +3,16 @@
     <tr>
         <th>제목</th>
         <th>작성일시</th>
+        <th>좋아요수</th>
+        <th>조회수</th>
     </tr>
     </thead>
     <tbody>
-<!--    <tr th:each="article : ${articleList}">-->
-<!--        <td th:text="${article.title}"></td>-->
-<!--        <td th:text="${article.content}"></td>-->
-<!--    </tr>-->
+    <tr th:each="articleResponseDto : ${articleResponseDtoList}">
+        <td th:text="${articleResponseDto.title}"></td>
+        <td th:text="${articleResponseDto.content}"></td>
+        <td th:text="${articleResponseDto.likeCount}"></td>
+        <td th:text="${articleResponseDto.viewCount}"></td>
+    </tr>
     </tbody>
 </table>
