Feat: 리스트에서 게시글 제목 클릭할 시 게시글 상세 화면으로 이동하는 기능 구현

--- a/src/main/resources/templates/article/list.html
+++ b/src/main/resources/templates/article/list.html
@@ -9,8 +9,10 @@
     </thead>
     <tbody>
     <tr th:each="articleResponseDto : ${articleResponseDtoList}">
-        <td th:text="${articleResponseDto.title}"></td>
-        <td th:text="${articleResponseDto.content}"></td>
+        <td>
+            <a th:href="@{|/article/detail/${articleResponseDto.id}|}" th:text="${articleResponseDto.title}"></a>
+        </td>
+        <td th:text="${articleResponseDto.createDate}"></td>
         <td th:text="${articleResponseDto.likeCount}"></td>
         <td th:text="${articleResponseDto.viewCount}"></td>
     </tr>
