Refactor: rq, rsData 형식에 맞춰 로그인, 회원가입 리팩토링

--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -1,1 +1,16 @@
 <h1>로그인 폼</h1>
+<body>
+    <form action="/member/login" method="post">
+        <div>
+            <label for="account">ID</label>
+            <input type="text" id="account" name="account" required>
+        </div>
+        <div>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+        </div>
+        <div>
+            <input type="submit" value="Login">
+        </div>
+    </form>
+</body>
