--- a/src/main/resources/templates/article/detailArticle.html
+++ b/src/main/resources/templates/article/detailArticle.html
@@ -1,7 +1,13 @@
-<h1 th:text="${articleResponseDto.title}"></h1>
-<div th:text="${articleResponseDto.content}"></div>
-
-<form th:action="@{|/comment/create/${articleResponseDto.id}|}" method="post">
+<link rel="stylesheet" type="text/css" th:href="@{/style.css}">
+<h1 th:text="${article.title}"></h1>
+<div th:text="${article.content}"></div>
+<h5 th:text="|${#lists.size(article.commentList)}개의 답변이 있습니다.|"></h5>
+<div>
+    <ul>
+        <li th:each="comment : ${article.commentList}" th:text="${comment.content}"></li>
+    </ul>
+</div>
+<form th:action="@{|/comment/create/${article.id}|}" method="post">
     <textarea name="content" id="content" rows="15"></textarea>
     <input type="submit" value="답변등록">
 </form>
