--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -1,1 +1,18 @@
-<h1>로그인 폼</h1>
+<html layout:decorate="~{layout/layout}">
+<div layout:fragment="content" class="container my-3">
+    <div class="flex justify-center items-center min-h-screen">
+        <div class="w-96 bg-white p-8 rounded-lg mb-64">
+            <h2 class="text-xl font-semibold mb-4">로그인</h2>
+            <div>
+                <label for="username" class="block mb-2">아이디</label>
+                <input type="text" id="username" class="border-b border-info px-2 py-2 w-full focus:outline-none" placeholder="아이디를 입력하세요">
+            </div>
+            <div>
+                <label for="password" class="block mb-2 mt-4">비밀번호</label>
+                <input type="password" id="password" class="border-b border-info px-2 py-2 w-full focus:outline-none" placeholder="비밀번호를 입력하세요">
+            </div>
+            <button class="mt-8 bg-info text-white px-4 py-2 rounded-lg">로그인</button>
+        </div>
+    </div>
+</div>
+</html>
