Feat: 이력서 탭 -> 면접 예상 질문으로 변경, 추후 이력서 검토 서비스 추가

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -34,7 +34,7 @@
     <a class="btn btn-ghost normal-case text-xl" href="/">
       <img class="h-12 w-auto" src="https://i.ibb.co/QJr89md/image2.png" alt="로고">
     </a>
-    <a class="btn btn-ghost normal-case text-xl">이력서</a>
+    <a href="/resumes/generate" class="btn btn-ghost normal-case text-xl">면접 예상 질문</a>
     <a class="btn btn-ghost normal-case text-xl">채용 공고</a>
     <a class="btn btn-ghost normal-case text-xl" href="/article/main">커뮤니티</a>
   </div>
