--- a/src/main/resources/templates/article/detailArticle.html
+++ b/src/main/resources/templates/article/detailArticle.html
@@ -5,7 +5,7 @@
         <div class="flex justify-between">
             <h1 class="text-2xl font-bold flex-grow" th:text="${article.title}"></h1>
             <p class="flex-grow text-xs mt-2" th:text="${#temporals.format(article.createDate, 'yyyy-MM-dd HH:mm')}"></p>
-            <a th:href="@{|/article/modify/${article.id}|}" class="text-xs text-black mt-2 underline">수정</a>
+            <a th:href="@{|/article/update/${article.id}|}" class="text-xs text-black mt-2 underline">수정</a>
             <a href="javascript:void(0);" th:data-uri="@{|/article/delete/${article.id}|}" class="delete text-xs text-black mt-2 mx-2 underline">삭제</a>
             <p class="text-xs mt-2 mr-2" th:text="|조회:${article.viewCount}|"></p>
             <p class="text-xs mt-2 mr-2" th:text="|추천:${article.likeCount}|"></p>
@@ -31,14 +31,24 @@
                         <div class="text-xs" th:text="${#temporals.format(comment.createDate, '(yyyy-MM-dd HH:mm)')}"></div>
                     </div>
                     <div class="flex items-end pb-2">
-                        <a th:href="@{|/comment/modify/${comment.id}|}" class="text-xs text-black underline">수정</a>
+                        <button class="text-xs text-black underline modify-button" onclick="editPost()" th:attr="data-id=${comment.id}">수정</button>
                         <a href="javascript:void(0);" th:data-uri="@{|/comment/delete/${comment.id}|}" class="delete text-xs text-black mx-2 underline">삭제</a>
-                        <button class="bg-info border-gray-300 text-white px-3 py-1 rounded-md mr-2 hover:bg-blue-500"><i class="fa-sharp fa-regular fa-thumbs-up text-xs"> 0</i></button>
+                        <button class="flex bg-info border-gray-300 text-white px-3 py-1 rounded-md mr-2 hover:bg-blue-500">
+                            <i class="fa-sharp fa-regular fa-thumbs-up text-xs"></i>
+                            <p th:text="${comment.likeCount}" class="ml-1 text-xs"></p>
+                        </button>
 
                     </div>
                 </div>
-                <p class="text-sm min-h-[40px] mt-2"th:text="${comment.content}">
-                </p>
+                <p th:id="|text-${comment.id}|" class="text-sm min-h-[40px] mt-2 modify-comment"th:text="${comment.content}"></p>
+
+                <form th:action="@{|/comment/update/${comment.id}|}" th:object="${commentForm}" method="post" class="mb-4 justify-between items-start">
+                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                    <textarea th:id="|textarea-${comment.id}|" th:field="*{content}" class="hidden modify-textarea form-textarea w-full p-3 resize-none overflow-y-auto border border-info rounded-md mb-2 text-sm" placeholder="게시글 내용"></textarea>
+                    <div class="flex">
+                        <input th:id="|button-${comment.id}|" type="submit" value="수정완료" class="hidden modify-save-button bg-info text-white px-4 py-2 rounded-md ml-2 flex-start text-xs hover:bg-blue-500 ml-auto" onclick="savePost()" th:attr="data-id=${comment.id}">
+                    </div>
+                </form>
             </li>
         </ul>
     </div>
@@ -62,5 +72,41 @@
             confirm('내용을 입력해야 합니다.');
         }
     });
+
+    function editPost() {
+        var id = event.target.getAttribute('data-id');
+
+        const contentElement = document.querySelector('#textarea-' + id);
+        const contentElement2 = document.querySelector('#button-' + id);
+        const textElement = document.querySelector('#text-' + id);
+
+        if (contentElement.classList.contains('hidden')) {
+            contentElement.classList.remove('hidden');
+            contentElement2.classList.remove('hidden');
+            contentElement.value = textElement.textContent.trim();
+            textElement.classList.add('hidden');
+        }
+    }
+
+    function savePost() {
+        var id = event.target.getAttribute('data-id');
+        const contentElement = document.querySelector('#textarea-' + id);
+        const contentElement2 = document.querySelector('#button-' + id);
+        const textElement = document.querySelector('#text-' + id);
+
+        if (!contentElement.classList.contains('hidden')) {
+            contentElement.classList.add('hidden');
+            contentElement2.classList.add('hidden');
+            textElement.textContent = contentElement.value;
+            textElement.classList.remove('hidden');
+        }
+    }
+
+    function increment() {
+        var iElement = document.getElementById("count");
+        var count = parseInt(iElement.innerText);
+        count++;
+        iElement.innerText = count;
+    }
 </script>
 </html>
