Feat: 기존 면접질문 파일 이름 변경 및 이력서 검토 뷰 파일 추가

--- a/src/main/resources/templates/resume/advice-request.html
+++ b/src/main/resources/templates/resume/advice-request.html
@@ -12,8 +12,10 @@
 </head>
 <body>
 
+
 <div layout:fragment="content" class="flex justify-center items-center h-auto mt-16">
-    <form action="/resumes/generate" method="post" style="width:600px; margin:auto;">
+    <form action="/resumes/advices" method="post" style="width:600px; margin:auto;">
+
         <label for="job" class="mb-4">원하는 직업을 선택해주세요</label>
         <div class="mt-2">
             <select class="select select-bordered w-full max-w-xs" id="job" name="job">
