--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -34,7 +34,8 @@
     <a class="btn btn-ghost normal-case text-xl" href="/">
       <img class="h-12 w-auto" src="https://i.ibb.co/QJr89md/image2.png" alt="로고">
     </a>
-    <a href="/resumes/generate" class="btn btn-ghost normal-case text-xl">면접 예상 질문</a>
+    <a href="/resumes/advices" class="btn btn-ghost normal-case text-xl">이력서 검토</a>
+    <a href="/resumes/questions" class="btn btn-ghost normal-case text-xl">면접 예상 질문</a>
     <a class="btn btn-ghost normal-case text-xl">채용 공고</a>
     <a class="btn btn-ghost normal-case text-xl" href="/article/main">커뮤니티</a>
   </div>
