--- a/src/main/resources/templates/article/main.html
+++ b/src/main/resources/templates/article/main.html
@@ -63,8 +63,8 @@
             <li th:each="article, loop : ${paging}" class="bg-white p-3 flex justify-between border-b h-11">
                 <a th:href="@{|/article/detail/${article.id}|}" th:text="${article.title}" class="text-sm flex-grow"></a>
                 <p class="text-sm mx-4 w-16 text-center">글쓴이1</p>
-                <div th:text="${article.likeCount}" class="text-sm mx-4 w-16 text-center"></div>
-                <p th:text="${#lists.size(article.commentList)}" class="text-sm mx-4 w-16 text-center"></p>
+                <div th:text="${#lists.size(article.likesList)}" class="text-sm mx-4 w-16 text-center"></div>
+                <p th:text="${#lists.size(article.commentList.?[deleted == false])}" class="text-sm mx-4 w-16 text-center"></p>
                 <p th:text="${article.viewCount}" class="text-sm mx-4 w-16 text-center"></p>
             </li>
         </ul>
