--- a/src/main/resources/templates/article/detailArticle.html
+++ b/src/main/resources/templates/article/detailArticle.html
@@ -30,22 +30,23 @@
         <ul class="container" th:each="comment : ${article.commentList}">
             <div th:if="${!comment.deleted}">
                 <li class="text-black p-1 justify-between border-b border-info">
-                    <div class="flex justify-between">
-                        <div class="flex items-end pb-2">
+                    <div class="flex justify-between items-center">
+                        <div class="flex items-end mb-3">
                             <div class="text-sm mr-2">글쓴이</div>
                             <div class="text-xs" th:text="${#temporals.format(comment.createdDate, '(yyyy-MM-dd HH:mm)')}"></div>
                         </div>
-                        <div class="flex items-end pb-2">
-                            <button class="text-xs text-black underline modify-button" onclick="editPost()" th:attr="data-id=${comment.id}">수정</button>
-                            <a href="javascript:void(0);" th:data-uri="@{|/comment/delete/${comment.id}|}" class="delete text-xs text-black mx-2 underline">삭제</a>
-                            <button class="flex bg-info border-gray-300 text-white px-3 py-1 rounded-md mr-2 hover:bg-blue-500">
-                                <i class="fa-sharp fa-regular fa-thumbs-up text-xs"></i>
-                                <p th:text="${comment.likeCount}" class="ml-1 text-xs"></p>
-                            </button>
-
+                        <div class="flex items-center justify-center">
+                            <button class="text-xs text-black underline modify-button pb-3" onclick="editPost()" th:attr="data-id=${comment.id}">수정</button>
+                            <a href="javascript:void(0);" th:data-uri="@{|/comment/delete/${comment.id}|}" class="delete text-xs text-black mx-2 underline pb-3">삭제</a>
+                            <form th:action="@{|/likes/like/comment/${comment.id}|}" method="post">
+                                <button type="submit" class="flex bg-info border-gray-300 text-white px-3 py-1 rounded-md mr-2 hover:bg-blue-500">
+                                    <i class="fa-sharp fa-regular fa-thumbs-up text-xs"></i>
+                                    <p th:text="${#lists.size(comment.likesList)}" class="ml-1 text-xs"></p>
+                                </button>
+                            </form>
                         </div>
                     </div>
-                    <p th:id="|text-${comment.id}|" class="text-sm min-h-[40px] mt-2 modify-comment"th:text="${comment.content}"></p>
+                    <p th:id="|text-${comment.id}|" class="text-sm min-h-[40px] modify-comment"th:text="${comment.content}"></p>
 
                     <form th:action="@{|/comment/update/${comment.id}|}" th:object="${commentForm}" method="post" class="mb-4 justify-between items-start">
                         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
