Feat: 채용공고 링크 추가

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -36,8 +36,8 @@
     </a>
     <a href="/resumes/advices" class="btn btn-ghost normal-case text-xl">이력서 검토</a>
     <a href="/resumes/questions" class="btn btn-ghost normal-case text-xl">면접 예상 질문</a>
-    <a class="btn btn-ghost normal-case text-xl">채용 공고</a>
-    <a class="btn btn-ghost normal-case text-xl" href="/article/main">커뮤니티</a>
+    <a href="/jobstatistic/search" class="btn btn-ghost normal-case text-xl">채용 공고</a>
+    <a href="/article/main" class="btn btn-ghost normal-case text-xl">커뮤니티</a>
   </div>
   <div class="flex-none">
     <ul class="menu menu-horizontal px-1">
