--- a/src/main/resources/templates/jobstatistic/list.html
+++ b/src/main/resources/templates/jobstatistic/list.html
@@ -1,8 +1,8 @@
-<html layout:decorate="~{layout/layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
+<html layout:decorate="~{layout/layout.html}">
 <head><title>통계 목록</title></head>
 
-
-<main layout:fragment="content" class="flex items-center justify-center flex-col">
+<body>
+<main layout:fragment="main" class="flex items-center justify-center flex-col">
 
 <!--  <h5 th:text="${}?: 'Rule'"-->
 <!--      class="text-lg font-semibold mb-4"></h5>-->
@@ -81,6 +81,7 @@
 
 
 </main>
+</body>
 </html>
 
 
