--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -1,10 +1,10 @@
-<html layout:decorate="~{layout/layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
+<html layout:decorate="~{layout/layout.html}">
 <head>
   <title>404</title>
 </head>
 <body>
 
-<main layout:fragment="content" class="flex-grow flex items-center justify-center">
+<main layout:fragment="main" class="flex-grow flex items-center justify-center">
   <div class="text-center">
     <i class="fa-regular fa-face-sad-tear"></i> 해당 페이지는 존재하지 않습니다.
   </div>
