--- a/src/main/resources/templates/layout/home.html
+++ b/src/main/resources/templates/layout/home.html
@@ -1,5 +1,10 @@
 <html layout:decorate="~{layout/layout}">
-<div layout:fragment="content" class="container my-3">
+<head>
+    <title>메인 페이지</title>
+</head>
+<body>
+<main layout:fragment="main" class="container my-3">
     <h1>메인화면입니다.</h1>
-</div>
+</main>
+</body>
 </html>
