--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -1,5 +1,9 @@
-<html layout:decorate="~{layout/layout}">
-<div layout:fragment="content" class="container my-3 mx-auto">
+<html layout:decorate="~{layout/layout.html}">
+<head>
+    <title>로그인</title>
+</head>
+<body>
+<main layout:fragment="main" class="container my-3 mx-auto">
     <div class="flex justify-center items-center min-h-screen">
         <div class="w-96 bg-white p-8 rounded-lg mb-64">
             <h2 class="text-xl font-semibold mb-4">로그인</h2>
@@ -14,5 +18,6 @@
             <button class="mt-8 bg-info text-white px-4 py-2 rounded-lg">로그인</button>
         </div>
     </div>
-</div>
+</main>
+</body>
 </html>
